--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+flint (1.1.1) stable; urgency=low
+
+  * Adding options for maxchildren and maxrequests
+
+ -- Igor Partola <igor@igorpartola.com>  Tue, 01 Feb 2011 10:10:00 -0500
+
 flint (1.1.0-1) stable; urgency=low
 
   * Using su instead of sudo
