--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+flint (1.1.4) stable; urgency=low
+
+  * Killing FastCGI processes with SIGKILL if they do not respond to SIGTERM
+  * Added a flint lock file to prevent concurrency issues
+
+ -- Igor Partola <igor@igorpartola.com>  Mon, 23 May 2011 08:26:00 -0500
+
 flint (1.1.3) stable; urgency=low
 
   * Added the status_all command
